			DNAME was encountered when fetching glue from a
			secure namespace. [RT #13501]

1805.	[bug]		Pending status was not being cleared when DLV was
			active. [RT #13501]

1804.	[bug]		Ensure that if we are queried for glue that it fits
			in the additional section or TC is set to tell the
			client to retry using TCP. [RT #10114]

1803.	[placeholder]	rt13483

1802.	[bug]		Handle connection resets better. [RT #11280]

1801.	[func]		Report differences between hints and real NS rrset
			and associated address records.

1800.	[bug]		Changes #1719 allowed a INSIST to be triggered.
			[RT #13428]

1799.	[bug]		'rndc flushname' failed to flush negative cache
			entries. [RT #13438]

1798.	[func]		The server syntax has been extended to support a
			range of servers.  [RT #11132]

1797.	[func]		named-checkconf now check acls to verify that they
			only refer to existing acls. [RT #13101]

1796.	[func]		"rndc freeze/thaw" now freezes/thaws all zones.

1795.	[bug]		"rndc dumpdb" was not fully documented.  Minor
			formating issues with "rndc dumpdb -all".  [RT #13396]

1794.	[func]		Named and named-checkzone can now both check for
			non-terminal wildcard records.

1793.	[func]		Extend adjusting TTL warning messages. [RT #13378]

1792.	[func]		New zone option "notify-delay".  Specify a minimum
			delay between sets of NOTIFY messages.

1791.	[bug]		'host -t a' still printed out AAAA and MX records.
			[RT #13230]

1790.	[cleanup]	Move lib/dns/sec/dst up into lib/dns.  This should
			allow parallel make to succeed.

1789.	[bug]		Prerequisite test for tkey and dnssec could fail
			with "configure --with-libtool".

1788.	[bug]		libbind9.la/libbind9.so needs to link against
			libisccfg.la/libisccfg.so.

1787.	[port]		HPUX: both "cc" and "gcc" need -Wl,+vnocompatwarnings.

1786.	[port]		AIX: libt_api needs to be taught to look for
			T_testlist in the main executable (--with-libtool).
			[RT #13239]

1785.	[bug]		libbind9.la/libbind9.so needs to link against